--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
     "classnames": "^2.3.1",
     "graphql": "^16.5.0",
     "lodash.get": "^4.4.2",
@@ -51,6 +47,11 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash.get": "^4.4.7"
+    "@types/lodash.get": "^4.4.7",
+    "cypress": "^10.4.0",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5"
   }
 }
