--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash.get": "^4.4.7",
-    "cypress": "^10.4.0",
     "@types/jest": "^28.1.4",
+    "@types/lodash.get": "^4.4.7",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5"
+    "@types/react-dom": "^18.0.5",
+    "cypress": "^10.4.0"
   }
 }
