--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "library-frontend",
+  "name": "library-frontend-graphql",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
